--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "async": "^2.5.0",
+    "cheerio": "^1.0.0-rc.2",
     "eksisozluk": "^0.2.3",
     "express": "^4.15.3",
     "request": "^2.81.0",
