--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cheerio": "^1.0.0-rc.2",
     "eksisozluk": "^0.2.3",
     "express": "^4.15.3",
+    "jsdom": "^11.1.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
