⛰🍮 Checkpoint ./server.js:365129/206 ./views/index.pug:365129/132

--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "async": "^2.5.0",
     "cheerio": "^1.0.0-rc.2",
+    "ejs": "^2.6.1",
     "eksisozluk": "^0.2.3",
     "express": "^4.15.3",
     "jsdom": "^11.1.0",
+    "pug": "^2.0.3",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
   },
