👱❄️ Checkpoint ./server.js:365129/79

--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "jsdom": "^11.1.0",
     "pug": "^2.0.3",
     "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "request-promise": "^4.2.1",
+    "socket.io": "^2.1.1"
   },
   "engines": {
     "node": "8.1.x"
