--- a/package.json
+++ b/package.json
@@ -12,15 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
-    "ejs": "^2.6.1",
-    "eksisozluk": "^0.2.3",
     "express": "^4.15.3",
-    "jsdom": "^11.1.0",
-    "jstransformer-coffee-script": "^1.1.1",
     "pug": "^2.0.3",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.1",
-    "socket.io": "^2.1.1"
+    "request": "^2.81.0"
   },
   "engines": {
     "node": "8.1.x"
