--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "//1": "describes your app and its dependencies",
   "//2": "https://docs.npmjs.com/files/package.json",
   "//3": "updating this file will download and update your packages",
-  "name": "my-glitch-app",
-  "version": "0.0.1",
-  "description": "What am I about?",
+  "name": "entri-fetch",
+  "version": "2.0.0",
+  "description": "eksiSozlukEntries",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -12,9 +12,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "cheerio": "^1.0.0-rc.2",
-    "express": "^4.15.3",
+    "express": "^4.16.3",
     "pug": "^2.0.3",
-    "request": "^2.81.0"
+    "request": "^2.87.0"
   },
   "engines": {
     "node": "8.1.x"
@@ -26,6 +26,8 @@
   "keywords": [
     "node",
     "glitch",
-    "express"
+    "express",
+    "request",
+    "eksi"
   ]
 }
